# epsilon-transformers

./: .dockerignore  .gitignore  .gitmodules  Code_RNNPIB_classification_v4.py  EvenProcess_PRD.py  PIB_fromForwardEM_Quaternary.py  README.md  RRXOR_sweep_cfg.yaml  analyzeF.py  baby_gpt.py  belief_states_movie.avi  example_code.py  fms_refactor.py  loss_lower_bound.txt  mypy.ini  pyproject.toml  run_sweeps.py  run_sweeps_RRXOR.py  run_sweeps_mess3.py  run_sweeps_new.py  run_sweeps_serpinski.py  run_sweeps_zero1R_abstract.py  setup.py  simplex_points.csv  superalignment_grant.ipynb  test.ipynb  test.py  testing.ipynb  testing_fsm.py  transformer.py  wandb_analysis.py  wandb_analysis_clean.py  wandb_analysis_rrxor.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
Benchmarks/: RRXOR_process.ipynb  entropy_analysis.py  error_analysis.py  main.ipynb  markov_utilities.py  visualization.py
EMLibrary/: __init__.py
clean_code/: complexity_measures.py  even_process.ipynb  finite_state_machine.py  marzen_et_al_2023_v2.ipynb  simple_transformer.py  utils.py  visualization.py
epsilon_transformers/: __init__.py  data_persistence.py  download_to_local.py  entropy_analysis.py  error_analysis.py  markov_utilities.py  persistence.py  processes.py  simple_transformer.py  training.py  upload_to_s3.py  visualization.py
epsilon_transformers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: Fernando_test.ipynb  Figure6.ipynb  Figure6_local.ipynb  Figure7_local.ipynb  Figure7_old.ipynb  analyze_data_cpu.py  analyze_data_cpu_parallel.py  analyze_data_cpu_parallel_ckpt.py  analyze_data_cpu_serial.py  compmech_processes.ipynb  config_0dd75e87-2e2b-4a66-8e54-7eb62dd50b3b.json  config_18163c42-09b3-420a-b262-a3aa55082bb1.json  config_48fc21e2-2b86-4894-a826-73ef4433e113.json  direction_steering_rrxor.ipynb  mess3.ipynb  (+20 more)
(+1802 files in other folders)
