[tool.poetry]
name = "epsilon_transformers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.34.1"
transformer_lens = "^1.12.0"
plotly = "^5.18.0"
numpy = "^1.26.3"
scipy = "^1.12.0"

[tool.poetry.dev-dependencies]
ipython = "^8.21.0"
jupyter = "^1.0.0"
pytest = "^7.4.4"
jaxtyping = "^0.2.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
