
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["epsilon_transformers"]

[project]
name = "epsilon_transformers"
version = "0.1"
description = "Computational Mechanics of Transformer Models"
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "seaborn",
    "matplotlib",
    "wandb",
    "scikit-learn",
    "plotly",
    "transformer_lens",
    "pytest",
    "PyDrive",
    "black",
    "mypy",
    "jaxtyping",
    "fire",
    "pydantic",
    "wandb",
    "python-dotenv",
    "tqdm",
]