[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["epsilon_transformers"]

[project]
name = "epsilon_transformers"
version = "0.1"
description = "Computational Mechanics of Transformer Models"
dependencies = [
    "black",
    "boto3",
    "datashader",
    "fire",
    "jaxtyping",
    "matplotlib",
    "mypy",
    "networkx",
    "numpy",
    "pandas",
    "pillow",
    "plotly",
    "pydantic",
    "PyDrive",
    "pytest",
    "python-dotenv",
    "PyYaml",
    "scikit-learn",
    "scipy",
    "seaborn",
    "torch",
    "tqdm",
    "transformer-lens",
    "wandb",
]